our gellary section added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
           <div class="menu-container">
             <div class="logo-pic">
-              <img class="photo" src="Images/Group 40071 (2).png" alt="" />
+              <img class="photo" src="./Images/Group 40071 (2).png" alt="" />
               <h4>Travel <span class="text-1">Tour</span></h4>
             </div>
             <div class="menu">
@@ -88,7 +88,7 @@
             <button class="btn-1">Read More</button>
           </div>
           <div>
-            <img src="/Images/Rectangle 4.png" alt="" class="popular-img" />
+            <img src="./Images/Rectangle 4.png" alt="" class="popular-img" />
           </div>
         </div>
       </section>
@@ -101,17 +101,24 @@
           </div>
           <div>
             <div class="img-section-1">
-                <img src="/Images/Rectangle 5.png" alt="" class="ppp">
-                <img src="/Images/Rectangle 8.png" alt="">
+                <img src="./Images/Rectangle 5.png" alt="" class="maldives">
+                <img src="./Images/Rectangle 8.png" alt="" class="indonesia">
+                <h3 class="title-1">Maldives</h3>
+                <h3 class="title-2">Indonesia</h3>
             </div>
             <div class="img-section-2">
-                <img src="/Images/Rectangle 6.png" alt="">
-                <img src="/Images/Rectangle 7.png" alt="">
-                <img src="/Images/Rectangle 9.png" alt="">
+                <img src="./Images/Rectangle 6.png" alt="" class="srilanka">
+                <img src="./Images/Rectangle 7.png" alt="" class="north-america">
+                <img src="./Images/Rectangle 9.png" alt="" class="kashmir">
+                <h3 class="title-3">Maldives</h3>
+                <h3 class="title-4">Indonesia</h3>
+                <h3 class="title-5">Indonesia</h3>
             </div>
             <div class="img-section-3">
-                <img src="/Images/Rectangle 11.png" alt="">
-                <img src="/Images/Rectangle 10.png" alt="">
+                <img src="./Images/Rectangle 11.png" alt="" class="bangladesh">
+                <img src="./Images/Rectangle 10.png" alt="" class="bandarban">
+                <h3 class="title-6">Maldives</h3>
+                <h3 class="title-7">Indonesia</h3>
             </div>
           </div>
         </div>
@@ -124,19 +131,19 @@
         </div>
         <div class="card-section">
           <div class="card-1">
-            <img src="/Images/hotel 1.jpg" alt="">
+            <img src="./Images/hotel 1.jpg" alt="">
             <h3>Handpicked Hotels</h3>
             <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet. </p>
           </div>
           <div class="card-2">
-            <img src="/Images/map 1.jpg" alt="">
+            <img src="./Images/map 1.jpg" alt="">
             <h3>World Class Service</h3>
             <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet. </p>
           </div>
         </div>
        <div class="card-section-3">
         <div class="card-3">
-          <img src="/Images/price-tag 1.jpg" alt="">
+          <img src="./Images/price-tag 1.jpg" alt="">
           <h3>Best Price Guarantee</h3>
           <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare <br> nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet. </p>
         </div>
@@ -226,6 +233,56 @@
           <img src="./Images/Group 40089.png" alt="">
         </div>
       </section>
+      <!-- Newsletter section -->
+      <section class="newsletter-section">
+        <div class="newsletter-title">
+          <h2>Newsletter</h2>
+          <p>Get your daily dose of travel news & tips. Sign up today!</p>
+          <input type="text" class="input-1" placeholder= "Enter your name" />
+          <br>
+          <input type="text" class="input-1" placeholder="Enter your email" />
+          <br>
+          <button class="sub-btn">Subscribe</button>
+        </div>
+        <div>
+          <img src="./Images/Rectangle 8 (1).png" alt="">
+        </div>
+      </section>
+
+       <!-- our gellary -->
+      <div class="gellary-contaner">
+        <div class="portfolio-section">
+          <h4>THE BEST GIFTS</h4>
+          <br />
+          <h2>Our Awesome Portfolio</h2>
+          <br />
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. <br />
+            Ipsum sed sodales risus ut pellentesque vel euismod.
+          </p>
+        </div>
+        <div class="portfolio-section1">
+          <div class="portfolio-img">
+            <img src="./Images/download (1).jpeg" alt="" />
+          </div>
+          <div class="portfolio-img">
+            <img src="photo//Rectangle 5.png" alt="" />
+          </div>
+          <div class="portfolio-img">
+            <img src="photo/Rectangle 4.png" alt="" />
+          </div>
+          <div class="portfolio-img">
+            <img src="photo/Rectangle 8.png" alt="" />
+          </div>
+          <div class="portfolio-img">
+            <img src="photo//Rectangle 6.png" alt="" />
+          </div>
+          <div class="portfolio-img">
+            <img src="photo/Rectangle 7.png" alt="" />
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer-section">
