gellary section and outher section added

--- a/index.html
+++ b/index.html
@@ -251,10 +251,8 @@
 
        <!-- our gellary -->
       <div class="gellary-contaner">
-        <div class="portfolio-section">
-          <h4>THE BEST GIFTS</h4>
-          <br />
-          <h2>Our Awesome Portfolio</h2>
+        <div class="gellary-section">
+          <h2>our gellary</h2>
           <br />
           <p>
             Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
@@ -262,24 +260,26 @@
             Ipsum sed sodales risus ut pellentesque vel euismod.
           </p>
         </div>
-        <div class="portfolio-section1">
-          <div class="portfolio-img">
-            <img src="./Images/download (1).jpeg" alt="" />
+        <div class="gellary-img">
+          <div>
+            <img class="img-1" src="./Images/download (1).jpeg" alt="" />
           </div>
-          <div class="portfolio-img">
-            <img src="photo//Rectangle 5.png" alt="" />
+          <div>
+            <img class="img-2" src="./Images/download.jpeg" alt="" />
           </div>
-          <div class="portfolio-img">
-            <img src="photo/Rectangle 4.png" alt="" />
+          <div>
+            <img class="img-3" src="./Images/download (1).jpeg" alt="" />
           </div>
-          <div class="portfolio-img">
-            <img src="photo/Rectangle 8.png" alt="" />
+        </div>
+        <div class="gellary-img">
+          <div>
+            <img class="img-4" src="./Images/images (2).jpeg" alt="" />
           </div>
-          <div class="portfolio-img">
-            <img src="photo//Rectangle 6.png" alt="" />
-          </div>
-          <div class="portfolio-img">
-            <img src="photo/Rectangle 7.png" alt="" />
+          <di>
+            <img class="img-5" src="./Images/images (1).jpeg" alt="" />
+          </di>
+          <div>
+            <img class="img-6" src="./Images/images.jpeg" alt="" />
           </div>
         </div>
       </div>
